--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="classe 100"> 
     <meta name="description" content="task list">
     <link rel="icon" href="img/Logo.png" type="image/png"> 
+    <link rel="stylesheet" href="css/style.css">
     <title>Toboolist</title>
 </head>
 <body>
