--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Toboolist</title>
 </head>
 <body>
-    
+    <!-- intestazione -->
+    <header >
+       <img class="logo" src="img/logo copia.png" alt="logo">
+       <h1 class="title">Toboolist</h1>
+    </header>
 </body>
 </html>
