--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
        <img class="logo" src="img/logo copia.png" alt="logo">
        <h1 class="title">Toboolist</h1>
     </header>
+
+    <main class="container">
+        
+
+    </main>
 </body>
 </html>
