--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     
     <nav class="nav-container">
         <section class="buttom-top">
+            <form action="orecchio-in-ascolto-backend">
+                <button class="buttom-left">Add Task</button>
+                <button class="buttom-right">Add Section</button>
+            </form>
+
         </section>
     </nav>
 
     <main class="main-container">
-        
+
     </main>
 </body>
 </html>
