--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         
                     </li> 
                     <li>
-                        <span class="check-mark">&#10003;</span> Summit update to mobile storefronts <span id="label" class="label-orange">Mobile</span>
+                        <span class="check-mark">&#10003;</span> Summit update to mobile storefronts <span class="label-orange">Mobile</span>
                         
                     </li> 
                 </ul>
