--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="card">
             
             <!-- Card-header buttom-top-->
-            <nav class="card-header">
+            <div class="card-header" >
                 <div class="buttom-top">
                     <button class="buttom-left">Add Task</button>
                     <button class="buttom-right">Add Section</button>
                 </div>
-            </nav>
+            </div>
                     
             <!-- Card-body list -->
             <div class="card-body">
